--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabeçalho">
         <h1>biquinho</h1>
-        <img src="https://s2.glbimg.com/YC1PBvWnUROuwvuHF7SuSHt6zi4=/smart/e.glbimg.com/og/ed/f/original/2020/09/04/pimenta_1.jpg" alt="">
+        <img src="https://cdn.awsli.com.br/600x450/998/998380/produto/36668849/4ecb3f69e1.jpg" alt="">
     </header>
         
 </body>
