--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabeçalho">
         <h1>biquinho</h1>
-        <img src="https://cdn.awsli.com.br/600x450/998/998380/produto/36668849/4ecb3f69e1.jpg" alt="">
+        <img src="WhatsApp Image 2023-05-10 at 11.13.14.jpeg" alt="">
     </header>
         
 </body>
