--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="cabeçalho">
         <h1>biquinho</h1>
-        <img src="WhatsApp Image 2023-05-10 at 11.13.14.jpeg" alt="">
+        <img src="image.png" alt="">
     </header>
         
 </body>
