--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <section class="apresentaçao_trabalho">
 <section>
 <b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
-<p>Olá, me chamo Guilherme Beraldi e sou professor de Matemática 2 para as turmas do 2°C e D do Colégio Estadual Duque de Caxias.</p>
-<p>Estou utilizando essa página HTML para ajudar meus alunos a criar uma apresentação online de seus trabalhos com a Prof. Ana Maria na matéria de Biotecnologia.</p>
+<p>Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</p>
+<p>Faço parte do grupo 1, e estou utilizando essa página HTML para registrar o exprimento com a pimenta biquinho do trabalho avaliativo em grupo com a Prof. Ana Maria da matéria de Biotecnologia.</p>
 </section>
 <img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
 </section>
