--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <section>
 <b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
 <p>Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</p>
-<p>Faço parte do grupo 1, e estou utilizando essa página HTML para registrar o exprimento com a pimenta biquinho do trabalho avaliativo em grupo com a Prof. Ana Maria da matéria de Biotecnologia.</p>
+<p>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
 </section>
 <img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
 </section>
