--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header class="cabeçalho">
-<img class="cabeçalho_imagem" src="fundo_pimenta.jpeg" alt="foto de fundo com várias pimentas vermelhas">
-<h1 class="cabeçaho_titulo">PIMENTINHA</h1>
+<img class="cabeçalho_imagem" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.embrapa.br%2Fbusca-de-solucoes-tecnologicas%2F-%2Fproduto-servico%2F418%2Fpimenta-brs-moema&psig=AOvVaw0YU_1hGiqZaczIpAkvmOCI&ust=1684583316571000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOjogYWogf8CFQAAAAAdAAAAABAE" alt="foto de fundo com várias pimentas vermelhas">
+<h1 class="cabeçaho_titulo">PIMENTA BIQUINHO</h1>
 <ul>
 <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
 <li class="cabeçalho_lista_item">Artigos Científicos</li>
