--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
 </section>
 <img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
 </section>
-
+<section>
+<b class="subtitulo_apresentação_trabalho">Relatórios da semana 1, 2 e 3:</b>
+<p>SEMANA 1:
+</p>
+<p>SEMANA 2: do dia 21/05/2023 à 28/05/2023.
+Hoje dia 24/05/2023 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos para o laboratório para que pudéssemos plantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pet ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5 cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes.</p>
+</section>
 </body>
 </html>
