--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
 </section>
 <section>
-<b class="subtitulo_apresentação_trabalho">Relatórios da semana 1, 2 e 3:</b>
+<b class="subtitulo_apresentação_trabalho">RELATÓRIOS DAS SEMANAS 1, 2 e 3:</b>
 <p>SEMANA 1:
 </p>
 <p>SEMANA 2: do dia 21/05/2023 à 28/05/2023.
