--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <p>  Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</p>
 <p>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupos, sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
 </section>
-<img class="imagem_arvore" src="arvore.png" alt="Imagem de árvore de pimenta">
+<img class="imagem_arvore" src="fotos com pimenta.jpeg" alt="Imagem de árvore de pimenta">
 </section>
 <section>
 <b class="subtitulo_apresentação_trabalho">RELATÓRIOS DAS SEMANAS 1, 2 e 3:</b>
