--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabeçalho">
-<img class="cabeçalho_imagem" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.embrapa.br%2Fbusca-de-solucoes-tecnologicas%2F-%2Fproduto-servico%2F418%2Fpimenta-brs-moema&psig=AOvVaw0YU_1hGiqZaczIpAkvmOCI&ust=1684583316571000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOjogYWogf8CFQAAAAAdAAAAABAE" alt="foto de fundo com várias pimentas vermelhas">
+<img class="cabeçalho_imagem" src="fotos com pimentas.jpeg" alt="foto de fundo com várias pimentas vermelhas">
 <h1 class="cabeçaho_titulo">PIMENTA BIQUINHO</h1>
 <ul>
 <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
@@ -22,7 +22,7 @@
 <p>  Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</p>
 <p>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupos, sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
 </section>
-<img class="imagem_arvore" src="fotos com pimenta.jpeg" alt="Imagem de árvore de pimenta">
+<img class="imagem_arvore" src="brotos da pimenta.jpeg" alt="Imagem de árvore de pimenta">
 </section>
 <section>
 <b class="subtitulo_apresentação_trabalho">RELATÓRIOS DAS SEMANAS 1, 2 e 3:</b>
