--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="cabeçalho">
-<img class="cabeçalho_imagem" src="fotos com pimentas.jpeg" alt="foto de fundo com várias pimentas vermelhas">
+<img class="cabeçalho_imagem" src="foto com pimentas.jpeg" alt="foto de fundo com várias pimentas vermelhas">
 <h1 class="cabeçaho_titulo">PIMENTA BIQUINHO</h1>
 <ul>
 <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
