--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 <section class="apresentaçao_trabalho">
 <section>
 <b class="titulo_apresentaçao_trabalho">INTRODUÇÃO:</b>
-<p>  Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</p>
-<p>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupos, sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
+<h1>Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</h1> 
+<H2>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupos, sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</H2>
 </section>
 <img class="imagem_arvore" src="brotos da pimenta.jpeg" alt="Imagem de árvore de pimenta">
 </section>
 <section>
 <b class="subtitulo_apresentação_trabalho">RELATÓRIOS DAS SEMANAS 1, 2 e 3:</b>
-<p>SEMANA 1:
-</p>
-<p>SEMANA 2: do dia 21/05/2023 à 28/05/2023.
-Hoje dia 24/05/2023 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos para o laboratório para que pudéssemos plantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pet ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5 cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes.</p>
+<h1>SEMANA 1:</h1>
+<h2>SEMANA 2: do dia 21/05/2023 à 28/05/2023.
+Hoje dia 24/05/2023 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos para o laboratório para que pudéssemos plantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pet ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5 cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes.</h2>
+<h3>SEMANA 3:</h3>
 </section>
 </body>
 </html>
