--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <header class="cabeçalho">
-<img class="cabeçalho_imagem" src="foto com pimentas.jpeg" alt="foto de fundo com várias pimentas vermelhas">
-<h1 class="cabeçaho_titulo">PIMENTA BIQUINHO</h1>
+<img class="cabeçalho_imagem" src="img1" alt="img2">
+<h1 class="cabeçaho_titulo">PIMENTINHA</h1>
 <ul>
 <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
 <li class="cabeçalho_lista_item">Artigos Científicos</li>
@@ -18,18 +18,25 @@
 </header>
 <section class="apresentaçao_trabalho">
 <section>
-<b class="titulo_apresentaçao_trabalho">INTRODUÇÃO:</b>
-<h1>Olá, me chamo Caroline Macedo e sou aluna da turma do 2°C do Colégio Estadual Civico Militar Duque de Caxias.</h1> 
-<H2>Faço parte do grupo 1, e estou utilizando essa página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupos, sobre a pimenta biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</H2>
+<b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
+<p>Olá, me chamo Maria Julia e sou do 2°C do Colégio Estadual Cívico Militar Duque de Caxias.</p>
+<p>sou do grupo 1, e estou utilizando esta página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupo, sobre a pimenta Biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
 </section>
-<img class="imagem_arvore" src="brotos da pimenta.jpeg" alt="Imagem de árvore de pimenta">
+<img class="imagem_arvore" src="img2" alt="Imagem de árvore de pimenta">
 </section>
+<section class="apresentaçao_trabalho">
 <section>
-<b class="subtitulo_apresentação_trabalho">RELATÓRIOS DAS SEMANAS 1, 2 e 3:</b>
-<h1>SEMANA 1:</h1>
-<h2>SEMANA 2: do dia 21/05/2023 à 28/05/2023.
-Hoje dia 24/05/2023 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos para o laboratório para que pudéssemos plantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pet ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5 cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes.</h2>
-<h3>SEMANA 3:</h3>
+<b class="subtitulo_apresentaçao_trabalho"> RELATÓRIOS DAS SEMANAS 1,2 E 3</b>
+<p>SEMANA 1</p> Na semana 1 do dia 15/05 percebemos que nossas pimentas biquinhos estavam com pulgões. Fizemos a retirada com água, vinagre e detergente molhado no algodão. Realizamos a análise de propagação vegetativa que dentre elas escolhemos a Estaquia, por ser mais fácil e adequado ao nosso ambiente escolar e área pequena.
+<img class="img3" src="pimenta-biquinho-gv.png" alt="">
+<img class="img4" scr="IMG-20230802-WA0144.jpg"
+<p>SEMANA 2</p> Hoje dia 24/05 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos ao laboratório para que pudessemos replantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pets ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes. 
 </section>
+</section>
+<p>SEMANA 3</p> Hoje dia 29/05 subimos para o laboratório, tiramos os pulgões encontrados novamente na pimenta, e plantamos algumas sementes, pois, todas as mudinhas haviam morrido. Podamos a pimenta retirando as partes mortas. E depois borrifamos com água todas elas. 
+<p>SEMANA 4</p> No relatório da semana 4, subimos ao laboratório, regamos a muda da pimenta biquinho e a nossa suculenta. Tiramos algumas fotos e analisamos se obteve mudança. Fomos aonde havíamos deixado a planta para tomar sol e verificar se teve mudanças, nos surpreendemos ao ver que as folhas da nossa pimenta biquinho havia caído todas e o galho estava completamente seco, as mudinhas plantadas através da semente da pimenta, mirreram todas, e as nossas suculentas não enraizaram. Controlamos a luminosidade, aguamos a planta e descartamos tudo o que estava morto.
+<img class="img5" scr="IMG-20230802-WA0133.jpg"
+<a href="Artigos.html">* Artigos Cientícos</a>
 </body>
 </html>
+
