--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header class="cabeçalho">
-        <img class="cabeçalho_imagem" src="img1" alt="img2">
+        <img class="cabeçalho_imagem" src="/home/escola/Downloads/CAROL, PÉ DE P.B..jpeg" alt="/home/escola/Downloads/MUDA TODA.jpeg">
         <h1 class="cabeçaho_titulo">PIMENTINHA</h1>
         <ul>
             <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
@@ -23,7 +23,7 @@
             <p>Olá, me chamo Maria Julia e sou do 2°C do Colégio Estadual Cívico Militar Duque de Caxias.</p>
             <p>sou do grupo 1, e estou utilizando esta página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupo, sobre a pimenta Biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
     </section>
-    <img class="imagem_arvore" src="img2" alt="Imagem de árvore de pimenta">
+    <img class="imagem_arvore" src="/home/escola/Downloads/CAROL COPINHO.jpeg" alt="/home/escola/Downloads/RAIZ.jpeg">
     </section>
     <section class="apresentaçao_trabalho">
     <section>
