--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>=
 
     <header class="cabeçalho">
         <img class="cabeçalho_imagem" src="/home/escola/Downloads/CAROL, PÉ DE P.B..jpeg" alt="/home/escola/Downloads/MUDA TODA.jpeg">
