--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Olá, me chamo Maria Julia e sou do 2°C do Colégio Estadual Cívico Militar Duque de Caxias.</p>
             <p>sou do grupo 1, e estou utilizando esta página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupo, sobre a pimenta Biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
     </section>
-    <img class="imagem_arvore" src="/home/escola/Downloads/CAROL COPINHO.jpeg" alt="/home/escola/Downloads/RAIZ.jpeg">
+    <img class="imagem_arvore" src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fwww.petz.com.br%2Fblog%2Fwp-content%2Fuploads%2F2022%2F11%2Fcomo-plantar-pimenta-biquinho5-1280x720.jpg&tbnid=fuPRIPtGEhJHlM&vet=12ahUKEwiA75_Vy4SBAxWoNrkGHQWzBHkQMygDegQIARBV..i&imgrefurl=https%3A%2F%2Fwww.petz.com.br%2Fblog%2Fplantas%2Fcomo-plantar-pimenta-biquinho%2F&docid=__7AMy8AZFV1mM&w=1280&h=720&q=muda%20de%20pimenta%20biquinho&ved=2ahUKEwiA75_Vy4SBAxWoNrkGHQWzBHkQMygDegQIARBV" alt="/home/escola/Downloads/RAIZ.jpeg">
     </section>
     <section class="apresentaçao_trabalho">
     <section>
