--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>=
 
     <header class="cabeçalho">
-        <img class="cabeçalho_imagem" src="/home/escola/Downloads/CAROL, PÉ DE P.B..jpeg" alt="/home/escola/Downloads/MUDA TODA.jpeg">
+        <img class="cabeçalho_imagem" src="CAROL, PÉ DE P.B..jpeg" alt="/home/escola/Downloads/MUDA TODA.jpeg">
         <h1 class="cabeçaho_titulo">PIMENTINHA</h1>
         <ul>
             <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
@@ -31,13 +31,14 @@
         <p>SEMANA 1</p> Na semana 1 do dia 15/05 percebemos que nossas pimentas biquinhos estavam com pulgões. Fizemos a retirada com água, vinagre e detergente molhado no algodão. Realizamos a análise de propagação vegetativa que dentre elas escolhemos a Estaquia, por ser mais fácil e adequado ao nosso ambiente escolar e área pequena.
 
         <img class="img3" src="pimenta-biquinho-gv.png" alt="">
-        <img class="img4" scr="IMG-20230802-WA0144.jpg"
+        <img class="img4" scr="IMG-20230802-WA0144.jpg">
         <p>SEMANA 2</p> Hoje dia 24/05 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos ao laboratório para que pudessemos replantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pets ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes. 
     </section>
-    </section>
+    
         <p>SEMANA 3</p> Hoje dia 29/05 subimos para o laboratório, tiramos os pulgões encontrados novamente na pimenta, e plantamos algumas sementes, pois, todas as mudinhas haviam morrido. Podamos a pimenta retirando as partes mortas. E depois borrifamos com água todas elas. 
         <p>SEMANA 4</p> No relatório da semana 4, subimos ao laboratório, regamos a muda da pimenta biquinho e a nossa suculenta. Tiramos algumas fotos e analisamos se obteve mudança. Fomos aonde havíamos deixado a planta para tomar sol e verificar se teve mudanças, nos surpreendemos ao ver que as folhas da nossa pimenta biquinho havia caído todas e o galho estava completamente seco, as mudinhas plantadas através da semente da pimenta, mirreram todas, e as nossas suculentas não enraizaram. Controlamos a luminosidade, aguamos a planta e descartamos tudo o que estava morto.
-        <img class="img5" scr="IMG-20230802-WA0133.jpg"
+        <img class="img5" scr="IMG-20230802-WA0133.jpg">
+    </section>
 <a href="Artigos.html">* Artigos Cientícos</a>
 </body>
 </html>
