--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>=
 
     <header class="cabeçalho">
-        <img class="cabeçalho_imagem" src="CAROL, PÉ DE P.B..jpeg" alt="/home/escola/Downloads/MUDA TODA.jpeg">
-        <h1 class="cabeçaho_titulo">PIMENTINHA</h1>
+        <img class="cabeçalho_imagem" src="CAROL, PÉ DE P.B..jpeg" alt="Foto do pé da pimenta biquinho">
+        <h1 class="cabeçaho_titulo">PIMENTA BIQUINHO</h1>
         <ul>
             <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
             <li class="cabeçalho_lista_item">Artigos Científicos</li>
