--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <header class="cabeçalho">
-        <img class="cabeçalho_imagem" src="img1" alt="img2">
+        <img class="cabeçalho_imagem" src="CAROL, PÉ DE P.B..jpeg" alt="foto do expe todo.jpeg">
         <h1 class="cabeçaho_titulo">Capsicum chinense</h1>
         <ul>
             <li class="cabeçalho_lista_item">Desenvolvimento da Planta</li>
@@ -22,21 +22,21 @@
             <b class="titulo_apresentaçao_trabalho"> Sobre o trabalho:</b>
             <p class="tamanho_texto">Olá, me chamo Maria Julia e sou do 2°C do Colégio Estadual Cívico Militar Duque de Caxias. Sou do grupo 1, e estou utilizando esta página HTML com a ajuda do prof. Guilherme Beraldi para criar uma apresentação online dos nossos trabalhos avaliativos em grupo, sobre a pimenta Biquinho com a Prof. Ana Marcia da matéria de Biotecnologia.</p>
         </section>
-        <img class="imagem" src="pimenta-biquinho-gv.png" alt="">
+        <img class="imagem" src="CAROL COPINHO.jpeg" alt="">
         </section>
         <section class="apresentaçao_trabalho">
             <b class="subtitulo_apresentaçao_trabalho"> RELATÓRIOS DAS SEMANAS 1,2 E 3</b>
             <h1>SEMANA 1</h1>
             <p>Na semana 1 do dia 15/05 percebemos que nossas pimentas biquinhos estavam com pulgões. Fizemos a retirada com água, vinagre e detergente molhado no algodão. Realizamos a análise de propagação vegetativa que dentre elas escolhemos a Estaquia, por ser mais fácil e adequado ao nosso ambiente escolar e área pequena.</p> 
          
-            <img class="imagem" src="pimentinha.jpg" alt="">
+            <img class="imagem" src="brotos da pimenta.jpeg" alt="">
             <h1>SEMANA 2</h1>
             </p> Hoje dia 24/05 tivemos aula com a professora Ana Márcia de biologia e biotecnologia. Fomos ao laboratório para que pudessemos replantar e lavar as plantas biquinho e as mudas menores dela. Começamos então a cortar duas garrafas pets ao meio para transportar as mudas pequenas com terra limpa. Em três copos plásticos acrescentamos terra limpa, e neles plantamos no total dez suculentas. Em outra garrafa pet colocamos também um bambu de 33,5cm em terra limpa. Jogamos enraizador em tudo que plantamos para que possa crescer raízes, e deixamos no sol. Por fim fizemos as marcações do número do grupo e data em todos os potes.</p>
             <h1>SEMANA 3</h1>
             <p>Hoje dia 29/05 subimos para o laboratório, tiramos os pulgões encontrados novamente na pimenta, e plantamos algumas sementes, pois, todas as mudinhas haviam morrido. Podamos a pimenta retirando as partes mortas. E depois borrifamos com água todas elas. </p>
             <h1>SEMANA 4</h1>
             <p>No relatório da semana 4, subimos no labóratorio aguamos a muda da pimenta biquinho e a nossa suculenta. tiramos algumas fotos e analisamos se obteve mudanças. Fomos aonde havíamos deixado a planta para tomar sol e verificar as mudancas, e as folhas da nossa pimenta biquinho havía caido todas e o galho secou um pouco, as mudinhas plantadas atrávez da semente da pimenta morreram todas, e as nossas suculentas nao enraízaram. Controlamos a luminosidade, aguamos a planta e descartamos tudo o que estava morto.</p> 
-            <img class="imagem" src="IMG-20230802-WA0133.jpg" alt="">
+            <img class="imagem" src="carol, biotec.png" alt="">
         <a href="Artigos.html">* Artigos Cientícos</a>
         </section>
     </body>
